--- a/_posts/2019-07-03-the-us-narrative-today.html
+++ b/_posts/2019-07-03-the-us-narrative-today.html
@@ -599,107 +599,107 @@ stories:
   domain: http://www.fauquier.com/
   link: https://www.fauquier.com/news/new-historical-markers-to-highlight-the-mellon-family-to-be/article_36cf4b48-9cd4-11e9-8dcf-03ce990026e5.html
 images:
-- name: old-barn-old-barn-1500-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-alberto-giacometti.jpg
-- name: abe-lincoln-one-ww2-color-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-color-file-00-00-00-00.jpg
-- name: carry-load-carryload-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-umberto-bocc.jpg
-- name: downtown-los-angeles-downtown-la-blue-circuit-4.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-blue-circuit-4.JPG
-- name: mistywoods-babyfoot-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dark-rain.jpg
-- name: gears-4882162452-fa3126b38d-b-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-yellow-paper.jpg
-- name: containership-containership-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit-3.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-post-modern.jpg
-- name: oldhouse-oldhouse-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-neo-instinct.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-clean-view.jpg
-- name: oldsmallboat-oldsmallboat-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-kand-two.jpg
-- name: aws-s3-square-C32Eg8bUEAEa-gj.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C32Eg8bUEAEa-gj.jpg
-- name: oldhotel-oldhotel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel.jpg
-- name: rain-princess-DSC_0048.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0048.jpg
-- name: old-barn-old-barn-1500-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-colorful-blocks.jpg
-- name: old-door-lock-old-door-lock-2-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-circuit-4.jpg
-- name: oldcabin-oldcabin-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-monet-one.jpg
-- name: ellis-island-ellisisland-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-colorful-dream.jpg
-- name: docks-docks-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-yellow-paper.jpg
-- name: wave-dark-hallway.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-dark-hallway.jpg
-- name: old-barn-old-barn-1500-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-diego-rivera1.jpg
-- name: wind-mills-windmills-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dry-skin.jpg
-- name: school-clouds-church-clouds-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-atari-missle.jpg
-- name: statue-of-liberty-front-view-statueofliberty-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-propaganda-leaflets.jpg
-- name: carry-load-carryload-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-ww2-dresden.jpg
-- name: subway-subway-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-smoking-cigarette.jpg
-- name: mosaic-face-mosaic-face-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-graham-sutherland.jpg
-- name: berlinwall2-berlinwall-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-umberto-bocc.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-pablo-blue.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-pablo-blue.png
-- name: statue-face-open-mouth-statue-face-open-mouth-atari-asteroids.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-atari-asteroids.png
-- name: nyc-flag-nycflag-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-circuit.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dali-three.jpg
-- name: abe-lincoln-one-post-modern-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-post-modern-file-00-00-00-00.jpg
-- name: razorcliff-razorcliff-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-sunday.jpg
-- name: border-fence-border-fence-on-hill-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dark-rain.jpg
-- name: oldhousecars-house-old-cars-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-neo-instinct.jpg
-- name: yosemite-yosemite-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-wols.jpg
-- name: white-house-lawn-white-house-lawn-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-atari-missle.jpg
-- name: school-clouds-church-clouds-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-bright-sand.jpg
-- name: nyc-flag-nycflag-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-electricity.jpg
-- name: rain-princess-IMG_7788.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7788.jpg
-- name: blossombar-purple-pond-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-pond-file-00-00-24-99.jpg
-- name: rockingchair-rockingchair-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-marcel-duchamp.jpg
-- name: bordercrossing-bordercrossing-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-atari-asteroids.jpg
-- name: subway-subway-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-spagetti-accident.jpg
-- name: bluelake-crafty-painting-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crafty-painting-file-00-00-00-00.jpg
-- name: gypsymosaic-gypsy-eyes-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-blue-circuit.jpg
-- name: downtown-trucksilo-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dali-two.jpg
-- name: sand-hand-sand-hand-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-copper-circuit.jpg
-- name: legal-statue-legalstatue-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-matrix.jpg
-- name: oldtrain-oldtrain-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-gan-vogh.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-really-hot.jpg
+- name: rockingchair-rockingchair-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-spagetti-accident.jpg
+- name: fence-fence-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-crabapple.jpg
+- name: oldhouse-oldhouse-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-far-away.jpg
+- name: power-lines-power-lines-empty-space-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-colored-circuits.jpg
+- name: aws-s3-stories-containership-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-copper-circuit.jpg
+- name: downtown-los-angeles-downtown-la-emily-carr.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-emily-carr.JPG
+- name: dc-statue-dcstatue-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-neo-instinct.jpg
+- name: berlinwall-DSC-0084-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-diego-rivera1.jpg
+- name: dragon-desert-desert-dragon-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-deep-connections.jpg
+- name: store-on-corner-store-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-monet-one.jpg
+- name: oldhousecars-house-old-cars-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-cinnamon-rolls.jpg
+- name: liberty-back-statue-liberty-back-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dry-skin.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-blue-brush.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-brush.JPG
+- name: castle-wall-DSC-0067-internet-numbers.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-internet-numbers.JPG
+- name: san-francisco-street-view-san-francisco-street-view-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-green-zuma.jpg
+- name: oldhouse-oldhouse-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-blue-granite.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-satan-red.jpg
+- name: downtheline-downtheline-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-constitution.jpg
+- name: rain-princess-IMG_8312.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8312.jpg
+- name: old-barn-old-barn-1500-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-purple-storm.jpg
+- name: crow-crow-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-purp-paper.jpg
+- name: downtown-trucksilo-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-matrix.jpg
+- name: store-on-corner-oldcabin-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-pablo-blue.jpg
+- name: fence-fence-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-gan-vogh.jpg
+- name: castle-wall-DSC-0067-blue-circuit-4.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-circuit-4.JPG
+- name: aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
+- name: containership-containership-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-crunch-paper.jpg
+- name: gypsymosaic-gypsy-eyes-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dark-soul.jpg
+- name: fence-mexico-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-yellow-paper.jpg
+- name: oldhousecars-house-old-cars-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-feed-people.jpg
+- name: walled-garden-walled-garden-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-crabapple.jpg
+- name: oldcabin-store-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-diego-rivera1.jpg
+- name: window-window-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-emily-carr.jpg
+- name: gypsy-wagon-gypsywagon-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-blue-circuit.jpg
+- name: stories-new-40-45-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-40-45-800-500-0-max-0--5--5.jpg
+- name: store-on-corner-store-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-crunch-paper.jpg
+- name: oldcabin-oldcabin-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-mucha-mult.jpg
+- name: copper-circuit-dark-hallway.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dark-hallway.jpg
+- name: oldbarn-oldbarn-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-colorful-blocks.jpg
+- name: oldhouse-granaryfield-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-gred-mash.jpg
+- name: old-granary-field-granaryfield-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-brush.jpg
+- name: aws-s3-diamondcreek-diamondcreek-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-diamondcreek-diamondcreek-still-600.jpg
+- name: razorwire-DSC-0080-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-plentiful.jpg
+- name: server-cloud-server-racks-door-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-plentiful.jpg
+- name: aws-s3-square-64-176-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-64-176-800-500-0-max-0--1--1.jpg
+- name: downtown-trucksilo-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-alberto-giacometti.jpg
+- name: cargo-ship-cargo-ship-on-sea-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-ww2-color.jpg
+- name: window-window-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-gred-mash.jpg
+- name: old-house-oldhouse-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-plentiful.jpg
+- name: eduardo-eduardo-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-colored-circuits.jpg
 ---
 Payroll Hiring Moderates Slightly In May.&nbsp;Handley Grad Jackson Signs With German Professional Basketball Team.&nbsp;Iredell Posts Fourth Consecutive Victory.&nbsp;Rim Country Bowl Mackey's.&nbsp;Shooters Added And It Looks Like Noel's Staying.&nbsp;Jury To Decide SEAL's Punishment For Posing With Corpse.&nbsp;Idaho Shakespeare Festival's 'The Music Man'.&nbsp;Taylor Swift's Lawyer Insists She Wasn't Given Chance To Buy Music Outright.&nbsp;
